WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35893
AX: hit testing a list box doesn't work anymore
https://bugs.webkit.org/show_bug.cgi?id=35893
Summary
AX: hit testing a list box doesn't work anymore
chris fleizach
Reported
2010-03-08 15:52:18 PST
You can no longer hit test through accessibility a <select size=10> item (listbox)
Attachments
patch
(12.22 KB, patch)
2010-03-08 16:13 PST
,
chris fleizach
darin
: review+
cfleizach
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-03-08 16:13:59 PST
Created
attachment 50263
[details]
patch
chris fleizach
Comment 2
2010-03-09 09:08:24 PST
commit-queue is taking too long. will commit myself
chris fleizach
Comment 3
2010-03-09 09:42:50 PST
http://trac.webkit.org/changeset/55729
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug