AX: hit testing a list box doesn't work anymore https://bugs.webkit.org/show_bug.cgi?id=35893

Reviewed by Darin Adler.

WebCore:

Since <option> elements don't have renderers, their hit testing needs
to be handled with a special case.

Test: platform/mac/accessibility/listbox-hit-test.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::ariaIsHidden):
(WebCore::AccessibilityRenderObject::doAccessibilityHitTest):

WebKitTools:

* DumpRenderTree/AccessibilityController.cpp:
(getElementAtPointCallback):
(AccessibilityController::getJSClass):
* DumpRenderTree/AccessibilityController.h:
* DumpRenderTree/gtk/AccessibilityControllerGtk.cpp:
(AccessibilityController::elementAtPoint):
* DumpRenderTree/mac/AccessibilityControllerMac.mm:
(AccessibilityController::elementAtPoint):
* DumpRenderTree/win/AccessibilityControllerWin.cpp:
(AccessibilityController::elementAtPoint):

LayoutTests:

* platform/mac/accessibility/listbox-hit-test-expected.txt: Added.
* platform/mac/accessibility/listbox-hit-test.html: Added.



Canonical link: https://commits.webkit.org/47026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55729 268f45cc-cd09-0410-ab3c-d52691b4dbfc