WebKitTools/DumpRenderTree/AccessibilityController.h
@@ -45,6 +45,7 @@ public:
     // Controller Methods - platform-independent implementations
     AccessibilityUIElement rootElement();
     AccessibilityUIElement focusedElement();
+    AccessibilityUIElement elementAtPoint(int x, int y);
 
     void setLogFocusEvents(bool);
     void setLogValueChangeEvents(bool);
